--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <canvas id="game-canvas"></canvas>
         <div id="score-display">Score: 0</div>
         <div id="game-over-screen" style="display: none;">Game Over</div>
+        <div id="auto-play-status">Auto-Play Mode: OFF</div>
     </div>
 </body>
 </html>
